envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
    traffic_direction: INBOUND
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config: 
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          upgrade_configs:
          - upgrade_type: websocket
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/websocket" }
                route: { cluster: websocketd_cluster, timeout: 60s }
              - match: { prefix: "/envoy" }
                route: { cluster: envoy_cluster, timeout: 60s, prefix_rewrite: / }
              - match: { prefix: "/" }
                route: { cluster: web_cluster, timeout: 60s }
            request_headers_to_add:
            - header: { key: x-proxyby-req, value: envoy }
              append: true
            response_headers_to_add:
            - header: { key: time-by-envoy, value: "%START_TIME%" }
              append: true

          http_filters:
          - name: envoy.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: envoy_cluster
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: envoy_cluster
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address: { address: 127.0.0.1, port_value: 9901 }
  
  - name: web_cluster
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: web_cluster
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address: { address: web, port_value: 80 }

  - name: websocketd_cluster
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: websocketd_cluster
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address: { address: websocketd, port_value: 8888 }
